Adding bg to game over screen

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="24" />
 
+    <supports-screens android:smallScreens="false"
+        android:normalScreens="false"
+        android:largeScreens="true"
+        android:xlargeScreens="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
