--- a/build.gradle
+++ b/build.gradle
@@ -10,19 +10,12 @@ buildscript {
         //NOTE: Desktop apps may not start with v 3.1.2, revert to 3.0.1
         classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.1'
-
-        //for aws
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE"
-
     }
 }
 
 allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
-
-    //for aws
-    apply plugin: "io.spring.dependency-management"
 
     version = '1.0'
     ext {
@@ -37,13 +30,6 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         google()
-    }
-
-    //fpr aws
-    dependencyManagement {
-        imports {
-            mavenBom 'com.amazonaws:aws-java-sdk-bom:1.11.228'
-        }
     }
 }
 
@@ -68,6 +54,11 @@ project(":android") {
     dependencies {
         implementation project(":core")
 
+        // Amazon Cognito dependencies for user access to AWS resources
+        implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.+@aar') { transitive = true }
+        // AmazonDynamoDB dependencies for NoSQL Database
+        implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
+
         implementation "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
@@ -88,11 +79,6 @@ project(":core") {
     apply plugin: "java"
 
     dependencies {
-
-        //for aws
-        implementation 'com.amazonaws:aws-java-sdk-dynamodb'
-        testCompile group: 'junit', name: 'junit', version: '4.12'
-
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
     }
