--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+
+        //for admob
+        maven { url "https://maven.google.com" }
+
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         google()
@@ -58,6 +62,9 @@ project(":android") {
         implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.+@aar') { transitive = true }
         // AmazonDynamoDB dependencies for NoSQL Database
         implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
+
+        //for admob
+        implementation 'com.google.android.gms:play-services-ads:15.0.1'
 
         implementation "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
