Privacy screen and GDPR done

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ project(":android") {
 
         //for admob
         implementation 'com.google.android.gms:play-services-ads:15.0.1'
-        //implementation 'com.google.android.ads.consent:consent-library:1.0.3'
+        implementation 'com.google.android.ads.consent:consent-library:1.0.3'
 
         implementation "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
