--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/GdxTheme" >
+        android:theme="@style/GdxTheme"
+        android:name="android.support.multidex.MultiDexApplication">
         <activity
             android:name="com.halogengames.poof.AndroidLauncher"
             android:label="@string/app_name" 
