--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,8 +28,9 @@ android {
         applicationId "com.halogengames.poof"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 12
-        versionName "0.12"
+        versionCode 16
+        versionName "0.16"
+        multiDexEnabled true
     }
     buildTypes {
         release {
