--- a/build.gradle
+++ b/build.gradle
@@ -59,10 +59,13 @@ project(":android") {
         implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.6.+@aar') { transitive = true }
 
         // AmazonDynamoDB dependencies for NoSQL Database
-        implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.+'
+        implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.6.23'
 
         //Amazon pinpoint for analytics
-        implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.6.+'
+        implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.6.23'
+
+
+        implementation 'com.android.support:multidex:1.0.3'
 
         //for chartboost
         implementation 'com.google.android.gms:play-services-ads:15.0.1'
